[#111] test: 운동기록 저장 테스트 작성